# pygsvector

./: .gitignore  README.md  README.rst  pyproject.toml
pygsvector/: __init__.py
pygsvector/client/: __init__.py  async_gs_client.py  async_gs_vec_client.py  bm25_index_param.py  collection_schema.py  exceptions.py  gs_client.py  gs_vec_client.py  hybrid_search.py  index_param.py  milvus_compat_client.py  milvus_like_client.py  partitions.py  schema_type.py
pygsvector/schema/: __init__.py  bm25_index.py  dialect.py  floatvector.py  gs_table.py  vec_dist_func.py  vector_index.py
pygsvector/util/: __init__.py  dls_to_sql.py  gs_version.py  sparse_vector.py  vector.py
source/: conf.py  index.rst  pygsvector.client.rst  pygsvector.quickstart.rst  pygsvector.schema.rst  pygsvector.util.rst
tests/: __init__.py  test.py  test_async.py  test_bm25_index.py  test_gaussdb_dialect.py  test_gs_vec_client.py  test_hybrid_search.py  test_milvus_like_client.py  test_partition_compile.py
