[tool.poetry]
name = "pygsvector"
version = "0.1.0"
description = "A python SDK for GaussDB Vector Store, based on SQLAlchemy, compatible with Milvus API."
authors = ["f00661128"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.17.0"
sqlalchemy = ">=1.4,<=3"
psycopg2-binary = "^2.9.0"
asyncpg = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.7"
sqlglot = "^26.0.1"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
